--- a/module-jdk-8/pom.xml
+++ b/module-jdk-8/pom.xml
@@ -18,13 +18,20 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-toolchains-plugin</artifactId>
-        <configuration>
-          <toolchains>
-            <jdk>
-              <version>1.8</version>
-            </jdk>
-          </toolchains>
-        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>toolchain</goal>
+            </goals>
+            <configuration>
+              <toolchains>
+                <jdk>
+                  <version>1.8</version>
+                </jdk>
+              </toolchains>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
